# xr-touch-widget

./: .gitignore  Cargo.toml  package.json
.github/workflows/: build.yml  release.yml
app/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
app/capabilities/: default.json
app/icons/: icon.icns
app/src/: engine.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  heartbeat.rs  http.rs  lib.rs  net.rs  osc.rs  paths.rs
crates/mock-xr/: Cargo.toml
crates/mock-xr/src/: lib.rs  main.rs
crates/mock-xr/tests/: loopback.rs
docs/: windows-checklist.md
docs/superpowers/plans/: 2026-07-02-xr-touch-trigger.md  2026-07-09-portable-build.md  2026-07-15-http-action.md
docs/superpowers/specs/: 2026-07-02-xr-touch-trigger-design.md  2026-07-09-portable-build-design.md  2026-07-15-http-action-design.md
ui/: demo.html  harness.html  package-lock.json  package.json  settings.html  vite.config.js  widget.html
ui/src/demo/: Demo.svelte  demo-main.js
ui/src/harness/: harness-main.js
ui/src/shared/: GlassPanel.svelte  platform.js  tokens.css
ui/src/widget/: Palette.svelte  Settings.svelte  ipc.js  settings-main.js  widget-main.js
