[package]
name = "xrt-app"
version = "0.1.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `devtools` temporarily enabled to debug the Windows blank-render issue: it
# turns on WebView2/WKWebView devtools (right-click → Inspect / F12) in release
# builds too, so we can read the console on the broadcast PC. Remove once fixed.
tauri = { version = "2", features = ["macos-private-api", "devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xrt-core = { path = "../crates/core" }
window-vibrancy = "0.6"

# macOS-only: used to round the window's contentView layer (see
# round_content_view_corners in main.rs). Versions pinned to match what
# tauri/wry/window-vibrancy already resolve in Cargo.lock (0.6.4 / 0.3.2),
# so this adds no new crate versions to the dependency tree.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = "0.3"
