[package]
name = "xrt-app"
version = "0.1.0"
edition = "2024"

[features]
# Build a PORTABLE binary: config.toml lives next to the exe (copy-portable
# folder) instead of the per-user OS config dir. Portable and installed are
# separate builds — `cargo tauri build --features portable` vs the default.
portable = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xrt-core = { path = "../crates/core" }
window-vibrancy = "0.6"

# macOS-only: used to round the window's contentView layer (see
# round_content_view_corners in main.rs). Versions pinned to match what
# tauri/wry/window-vibrancy already resolve in Cargo.lock (0.6.4 / 0.3.2),
# so this adds no new crate versions to the dependency tree.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = "0.3"
