[package]
name = "xrt-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
rosc = "0.11"
thiserror = "2"
# D16 HTTP actions: plain-http only (field gear is private-LAN http://) —
# no TLS stack. Blocking by design; the engine spawns a thread per call.
ureq = { version = "2", default-features = false }

[dev-dependencies]
tempfile = "3"
